fixing logo not being centered on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,6 +535,10 @@ footer a{
 /*tablet responsivity*/
 
 @media (max-width: 750px){
+    .logo{
+        margin-top: 0;
+    }
+    
     .menuMobile{
         display: flex;
     }
